--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,14 @@
   padding: 5px;
   background: black;
 }
+
+.formulaScreen {
+  min-height: 20px;
+  font-family: digital;
+  font-size: 20px;
+  line-height: 20px;
+  color: yellow;
+  text-align: right;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
