--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,7 @@
 @import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono';
+
+$button: #4d4d4d;
+
 @font-face {
   font-family: "Digital";
   src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
@@ -36,6 +39,11 @@ button {
   position: relative;
   height: 65px;
   width: 80px;
+  background: $button;
   color: white;
   outline: 1px solid black;
+  border: none;
+  font-family: Share Tech Mono, monospace;
+  font-size: 20px;
+  cursor: default;
 }
