--- a/src/App.scss
+++ b/src/App.scss
@@ -23,6 +23,7 @@ $button: #4d4d4d;
   line-height: 20px;
   color: yellow;
   text-align: right;
+  vertical-align: text-top;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
