--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,18 @@ $button: #4d4d4d;
   word-wrap: break-word;
 }
 
+@media (max-width: 900px){
+  .calculator {
+    width: auto;
+    border: 1px;
+  }
+
+  .formulaScreen {
+    font-size: 18px;
+    line-height: 18px;
+  }
+}
+
 .outputScreen {
   text-align: right;
   color: white;
