--- a/src/App.scss
+++ b/src/App.scss
@@ -28,18 +28,6 @@ $button: #4d4d4d;
   word-wrap: break-word;
 }
 
-@media (max-width: 900px){
-  .calculator {
-    width: auto;
-    border: 1px;
-  }
-
-  .formulaScreen {
-    font-size: 18px;
-    line-height: 18px;
-  }
-}
-
 .outputScreen {
   text-align: right;
   color: white;
@@ -59,6 +47,26 @@ button {
   font-family: Share Tech Mono, monospace;
   font-size: 20px;
   cursor: default;
+}
+
+@media (max-width: 900px){
+  .calculator {
+    border: 1px;
+  }
+
+  .formulaScreen {
+    font-size: 18px;
+    line-height: 18px;
+  }
+
+  .outputScreen {
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  button {
+    font-size: 18px;
+  }
 }
 
 button:hover{
