--- a/src/App.scss
+++ b/src/App.scss
@@ -28,7 +28,7 @@ $button: #4d4d4d;
   word-wrap: break-word;
 }
 
-.outputScreen {
+#display {
   text-align: right;
   color: white;
   font-family: digital;
